<resources>
    <string name="app_name">GTO Helper</string>
    <string name="home">Главная</string>
    <string name="help">Помощь</string>
    <string name="help_title">Помощь</string>
    <string name="delete">Удалить</string>
    <string name="tableName">Название</string>
    <string name="tableDescription">Описание</string>
    <string name="new_competition">Новое соревнование</string>
    <string name="competitions">Соревнования</string>
    <string name="new_competitor">Новый участник</string>
    <string name="competitor_name_title">Имя участника</string>
    <string name="team_name_title">Название команды</string>
    <string name="team_name">Команда: %1$s</string>
    <string name="competitor_number">Номер участника</string>
    <string name="gender_title">Пол</string>
    <string name="competitor_gender">Пол: %1$s</string>
    <string name="competitor_degree">Ступень: %1$s</string>
    <string name="competitor_degree_title">Ступень участника</string>
    <string name="save_new_competitor">Сохранить нового участника</string>
    <string name="competitors_list">Список участников</string>
    <string name="competitors">Участники (%1$d)</string>
    <string name="disciplines">Дисциплины</string>
    <string name="results">Результаты</string>
    <string name="no_competitions_hint">Чтобы добавить соревнование, нажмите + внизу экрана</string>
    <string name="load_failed">Load failed</string>
    <string name="cancel">Отмена</string>
    <string name="adding_from_table_title">Добавление из таблицы</string>
    <string name="edit_competitor">Изменить участника</string>
    <string name="search_competitors_hint">Поиск участников...</string>
    <string name="results_title">Результаты</string>
    <string name="ok">Ок</string>
    <string name="competitor_does_not_exist">Участник с таким номером не существует в соревновании</string>
    <string name="result_already_exists">Результат участника с таким номером уже существует</string>
    <string name="edit">Редактировать</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="accept">Принять</string>
</resources>