<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/competitionListFragment">

    <fragment
        android:id="@+id/competitionListFragment"
        android:name="com.gtohelper.presentation.ui.competitions.CompetitionListFragment"
        android:label="@string/competitions"
        tools:layout="@layout/fragment_competitions_list">
        <action
            android:id="@+id/action_mainFragment_to_competitionCreationFragment"
            app:destination="@id/competitionCreationFragment" />
        <action
            android:id="@+id/action_mainFragment_to_helpFragment"
            app:destination="@id/helpFragment" />
        <action
            android:id="@+id/action_competitionListFragment_to_competitionDetailsFragment"
            app:destination="@id/competition_nav_graph" />
    </fragment>
    <fragment
        android:id="@+id/competitionCreationFragment"
        android:name="com.gtohelper.presentation.ui.competition_creation.CompetitionCreationFragment"
        android:label="@string/new_competition"
        tools:layout="@layout/fragment_competition_creation" />
    <fragment
        android:id="@+id/helpFragment"
        android:name="com.gtohelper.presentation.ui.help.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />
    <include app:graph="@navigation/competition_nav_graph" />
</navigation>