<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/competitionListFragment">

    <fragment
        android:id="@+id/competitionListFragment"
        android:name="com.gtohelper.presentation.ui.competitions.CompetitionListFragment"
        android:label="@string/competitions"
        tools:layout="@layout/fragment_competitions_list">
        <action
            android:id="@+id/action_mainFragment_to_competitionCreationFragment"
            app:destination="@id/competitionCreationFragment" />
        <action
            android:id="@+id/action_mainFragment_to_helpFragment"
            app:destination="@id/helpFragment" />
        <action
            android:id="@+id/action_competitionListFragment_to_disciplinesListFragment"
            app:destination="@id/disciplinesListFragment" />
    </fragment>
    <fragment
        android:id="@+id/competitorsResultsFragment"
        android:name="com.gtohelper.presentation.ui.competitors_results.CompetitorsResultsFragment"
        android:label="Результаты"
        tools:layout="@layout/fragment_competitors_results" />
    <fragment
        android:id="@+id/competitorsListFragment"
        android:name="com.gtohelper.presentation.ui.competitors_list.CompetitorsListFragment"
        android:label="@string/competitors_list"
        tools:layout="@layout/fragment_competitors_list">
        <action
            android:id="@+id/action_competitorsListFragment_to_competitorCreation"
            app:destination="@id/competitorCreationFragment" />
        <action
            android:id="@+id/action_competitorsListFragment_to_editCompetitorFragment"
            app:destination="@id/editCompetitorFragment" />
    </fragment>
    <fragment
        android:id="@+id/disciplinesListFragment"
        android:name="com.gtohelper.presentation.ui.disciplines_list.DisciplinesListFragment"
        android:label="Название команды"
        tools:layout="@layout/fragment_disciplines_list">
        <action
            android:id="@+id/action_disciplinesListFragment_to_deleteDisciplineDialogFragment"
            app:destination="@id/deleteDisciplineDialogFragment" />
        <action
            android:id="@+id/action_disciplinesListFragment_to_deleteCompetitionDialogFragment"
            app:destination="@id/deleteCompetitionDialogFragment" />
        <action
            android:id="@+id/action_disciplinesListFragment_to_addDisciplineFragment"
            app:destination="@id/addDisciplineFragment" />
        <action
            android:id="@+id/action_disciplinesListFragment_to_competitorsListFragment"
            app:destination="@id/competitorsListFragment" />
        <action
            android:id="@+id/action_disciplinesListFragment_to_competitorsResultsFragment"
            app:destination="@id/competitorsResultsFragment" />
    </fragment>
    <dialog
        android:id="@+id/deleteDisciplineDialogFragment"
        android:name="com.gtohelper.presentation.ui.disciplines_list.delete_discpiline.DeleteDisciplineDialogFragment"
        android:label="DeleteDisciplineDialogFragment" />
    <dialog
        android:id="@+id/deleteCompetitionDialogFragment"
        android:name="com.gtohelper.presentation.ui.disciplines_list.delete_competition.DeleteCompetitionDialogFragment"
        android:label="DeleteCompetitionDialogFragment" />
    <fragment
        android:id="@+id/competitionCreationFragment"
        android:name="com.gtohelper.presentation.ui.add_competition.CompetitionCreationFragment"
        android:label="@string/new_competition"
        tools:layout="@layout/fragment_competition_creation" />
    <fragment
        android:id="@+id/helpFragment"
        android:name="com.gtohelper.presentation.ui.help.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/competitionDetailsFragment"
        android:name="com.gtohelper.presentation.ui.competition_detail.CompetitionDetailsFragment"
        android:label=""
        tools:layout="@layout/fragment_competition_details"/>
    <fragment
        android:id="@+id/addDisciplineFragment"
        android:name="com.gtohelper.presentation.ui.disciplines_list.add_discipline.AddDisciplineFragment"
        android:label="Добавить дисциплину"
        tools:layout="@layout/fragment_add_discipline" />
    <fragment
        android:id="@+id/competitorCreationFragment"
        android:name="com.gtohelper.presentation.ui.competitors_list.add_competitor.AddCompetitorFragment"
        android:label="@string/new_competitor" />
    <fragment
        android:id="@+id/editCompetitorFragment"
        android:name="com.gtohelper.presentation.ui.competitors_list.edit_competitor.EditCompetitorFragment"
        android:label="EditCompetitorFragment" />
</navigation>